# boltzmann

./: .gitignore  Cargo.toml  LICENSE.md  README.md  _pyproject.toml  boltzmann.boltzmann.html  boltzmann.core.html  boltzmann.html  boltzmann.kernel_gen.html  boltzmann.simulation.html  boltzmann.units.html  boltzmann.utils.html  boltzmann.utils.logger.html  boltzmann.utils.mpl.html  boltzmann.utils.option.html  boltzmann.utils.vtkio.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: CI.yml  python-app.yml
_modules/: index.html
_modules/boltzmann/: core.html  kernel_gen.html  mock.html  simulation.html  units.html
_sources/: boltzmann.rst.txt  boltzmann.utils.mpl.rst.txt  boltzmann.utils.option.rst.txt  boltzmann.utils.rst.txt  index.rst.txt
_sources/guides/: script.rst.txt
api/: boltzmann.core.html  boltzmann.html  boltzmann.mock.html  boltzmann.simulation.html  boltzmann.units.html  boltzmann.utils.html  boltzmann.utils.logger.html  boltzmann.utils.mpl.html  boltzmann.utils.option.html  boltzmann.utils.postproc.html  boltzmann.utils.vtkio.html  modules.html
docs/: Makefile  README.md  build.sh  deploy.sh
docs/source/: boltzmann.boltzmann.rst  boltzmann.core.rst  conf.py  (+7 more)
gallery/: README.md
guides/: basic.html  script.html  setup.html  units.html
python/: core.py  ics.py  pyproject.toml  setup.py  vtkio.py
src/: domain.rs  fields.rs  lbm.rs  lib.cl  lib.rs  opencl.rs  raster.rs  simulation.rs  update_d2q9_bgk.cl  utils.rs  vect_d.rs  vect_s.rs  velocities.rs
(+54 files in other folders)
