[package]
name = "boltzmann"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "boltzmann"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.23.3"
numpy = "0.23.0"
num-traits = "0.2"
opencl3 = "0.10.0"
ndarray = { version = "0.16.1", features = ["rayon", "serde"] }
rayon = "1.10.0"
serde = { version = "1.0.218", features = ["derive"] }
rmp-serde = "1.3.0"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[profile.release]
opt-level = 3
overflow-checks = false
target-feature = "+simd128"
